# python_postgres_web_app

./: .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  compose-test-runner.yaml  compose.yaml  pyproject.toml  readme.md
src/: Dockerfile
src/adprovider/: app.py  db.py  requirements.txt
src/adserve/: Dockerfile  app.py  requirements.txt
src/simulate/: Dockerfile  locustfile.py
src/webapp/: Dockerfile  __init__.py  app.py  db.py  githook.py  jobs.py  requirements.txt  tests.py
src/webapp/templates/: index.html  user_detail.html
web_app/: app.py  db.py  pyproject.toml  requirements.txt  test_app.py  tests.py
web_proxy/: default.conf  default.conf.template
